[gd_scene load_steps=48 format=2]

[ext_resource path="res://Code/Player.gd" type="Script" id=1]
[ext_resource path="res://Art/Particles/circle_02.png" type="Texture" id=2]
[ext_resource path="res://Code/Score.gd" type="Script" id=3]
[ext_resource path="res://Code/Bar.gd" type="Script" id=4]
[ext_resource path="res://Art/UI/BarYellow.png" type="Texture" id=5]
[ext_resource path="res://Art/UI/BarIndicator.png" type="Texture" id=6]
[ext_resource path="res://Art/UI/BarGreen.png" type="Texture" id=7]
[ext_resource path="res://Art/UI/BarRed.png" type="Texture" id=8]
[ext_resource path="res://Code/AI.gd" type="Script" id=9]
[ext_resource path="res://Code/BallK.gd" type="Script" id=10]
[ext_resource path="res://Art/UI/scorebg.png" type="Texture" id=11]
[ext_resource path="res://Art/UI/refresh.png" type="Texture" id=12]
[ext_resource path="res://Art/UI/pause.png" type="Texture" id=13]
[ext_resource path="res://Art/UI/list.png" type="Texture" id=14]
[ext_resource path="res://Art/UI/settings.png" type="Texture" id=15]
[ext_resource path="res://Art/UI/speaker.png" type="Texture" id=16]
[ext_resource path="res://Code/UI.gd" type="Script" id=17]
[ext_resource path="res://Art/UI/mute.png" type="Texture" id=18]
[ext_resource path="res://Art/UI/play-button.png" type="Texture" id=19]
[ext_resource path="res://Scenes/iziman.tscn" type="PackedScene" id=20]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.10803, 2.98461, 1.10273 )

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 3.57891, 2.37135, 2.45217 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1.10803, 2.98461, 1.10273 )

[sub_resource type="CapsuleMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.054902, 0, 1, 1 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 2.97416, 2.722, 2.27746 )

[sub_resource type="PhysicsMaterial" id=8]
friction = 0.1
bounce = 1.0

[sub_resource type="BoxShape" id=9]
margin = 0.1

[sub_resource type="CubeMesh" id=10]

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.254902, 0.937255, 0.156863, 1 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 1, 1.4, 1 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 0.176682, 1.7, 0.343433 )

[sub_resource type="SpatialMaterial" id=14]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="BoxShape" id=15]
extents = Vector3( 1, 1.1, 1 )

[sub_resource type="SphereShape" id=16]

[sub_resource type="SphereMesh" id=17]

[sub_resource type="SpatialMaterial" id=18]
albedo_color = Color( 0.529412, 0.901961, 0.0352941, 1 )

[sub_resource type="Curve" id=19]
_data = [ Vector2( 0, 0.0238637 ), 0.0, 0.0, 0, 0, Vector2( 0.183544, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.265823, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.556962, 0.389026 ), -3.73455, -3.73455, 0, 0, Vector2( 0.78481, 0.0454545 ), -0.39899, -0.39899, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=20]
curve = SubResource( 19 )

[sub_resource type="ParticlesMaterial" id=21]
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
scale_curve = SubResource( 20 )

[sub_resource type="SpatialMaterial" id=22]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=23]
material = SubResource( 22 )
size = Vector2( 5, 5 )

[sub_resource type="PhysicsMaterial" id=24]
absorbent = true

[sub_resource type="CubeMesh" id=25]

[sub_resource type="BoxShape" id=26]

[sub_resource type="BoxShape" id=27]
extents = Vector3( 1, 1.001, 1 )

[node name="Tennis Journey" type="Spatial"]

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 4.171, 37 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00852495, -0.00650501, 0 )
shape = SubResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="Player"]
transform = Transform( 1, 0, 0, 0, -3.16229e-07, -1.941, 0, 1, -1.62921e-07, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )

[node name="HitZone" type="Area" parent="Player"]

[node name="CollisionShape" type="CollisionShape" parent="Player/HitZone"]
shape = SubResource( 3 )

[node name="Bar" type="Spatial" parent="Player"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 1, -1.88623, 0, 1.7921 )
visible = false

[node name="Indicator" type="Sprite3D" parent="Player/Bar"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0 )
billboard = 1
transparent = false
double_sided = false
texture = ExtResource( 6 )

[node name="Green" type="Sprite3D" parent="Player/Bar"]
billboard = 1
transparent = false
texture = ExtResource( 7 )

[node name="Yellow" type="Sprite3D" parent="Player/Bar"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0 )
billboard = 1
transparent = false
texture = ExtResource( 5 )

[node name="Red" type="Sprite3D" parent="Player/Bar"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
billboard = 1
transparent = false
texture = ExtResource( 8 )

[node name="Red2" type="Sprite3D" parent="Player/Bar"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0 )
billboard = 1
transparent = false
texture = ExtResource( 8 )

[node name="BarTimer" type="Timer" parent="Player/Bar"]
wait_time = 0.15
one_shot = true

[node name="Sprite3D" type="Sprite3D" parent="Player"]
billboard = 1

[node name="Viewport" type="Viewport" parent="Player/Sprite3D"]
size = Vector2( 10, 120 )
transparent_bg = true
usage = 0
render_target_v_flip = true

[node name="FirstPersonCamera" type="Camera" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
far = 150.0

[node name="iziman" parent="Player" instance=ExtResource( 20 )]
transform = Transform( -0.5, 0, -1.62921e-07, 0, 0.5, 0, 1.62921e-07, 0, -0.5, 0, -2, 0 )

[node name="AI" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 4.171, -37 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="AI"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00852494, -0.00650501, 0 )
shape = SubResource( 4 )

[node name="CSGMesh" type="CSGMesh" parent="AI"]
transform = Transform( 1, 0, 0, 0, -3.16229e-07, -1.941, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 5 )
material = SubResource( 6 )

[node name="HitZone" type="Area" parent="AI"]

[node name="CollisionShape" type="CollisionShape" parent="AI/HitZone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0125732, 0.0502491, -0.0143585 )
shape = SubResource( 7 )

[node name="Court" type="StaticBody" parent="."]
transform = Transform( -5.5393e-06, 0, 16, 0, 1, 0, -34, 0, -2.60673e-06, 0, 0, 0 )
physics_material_override = SubResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Court"]
shape = SubResource( 9 )

[node name="CSGMesh" type="CSGMesh" parent="Court"]
mesh = SubResource( 10 )
material = SubResource( 11 )

[node name="Court" type="Area" parent="Court"]

[node name="CollisionShape" type="CollisionShape" parent="Court/Court"]
shape = SubResource( 12 )

[node name="HitPoints" type="Spatial" parent="Court"]

[node name="L" type="Area" parent="Court/HitPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.595869, 0, -0.757598 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Court/HitPoints/L"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0869722, 0, 0.131868 )
shape = SubResource( 13 )

[node name="R" type="Area" parent="Court/HitPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.595869, 0, 0.49957 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Court/HitPoints/R"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0869722, 0, 0.131868 )
shape = SubResource( 13 )

[node name="C" type="Area" parent="Court/HitPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.595869, 0, -0.12543 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Court/HitPoints/C"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0869722, 0, 0.131868 )
shape = SubResource( 13 )

[node name="PlayerLeft" type="Area" parent="Court/HitPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.44759, 0, -0.757598 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Court/HitPoints/PlayerLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0869722, 0, 0.131868 )
shape = SubResource( 13 )

[node name="PlayerRight" type="Area" parent="Court/HitPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.44759, 0, 0.49957 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Court/HitPoints/PlayerRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0869722, 0, 0.131868 )
shape = SubResource( 13 )

[node name="PlayerCenter" type="Area" parent="Court/HitPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.44759, 0, -0.12543 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Court/HitPoints/PlayerCenter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0869722, 0, 0.131868 )
shape = SubResource( 13 )

[node name="LL" type="Area" parent="Court/HitPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.27234, 0, -0.757598 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Court/HitPoints/LL"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0869722, 0, 0.131868 )
shape = SubResource( 13 )

[node name="LR" type="Area" parent="Court/HitPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.27234, 0, 0.49957 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Court/HitPoints/LR"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0869722, 0, 0.131868 )
shape = SubResource( 13 )

[node name="LC" type="Area" parent="Court/HitPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.27234, 0, -0.12543 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Court/HitPoints/LC"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0869722, 0, 0.131868 )
shape = SubResource( 13 )

[node name="UL" type="Area" parent="Court/HitPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.919398, 0, -0.757598 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Court/HitPoints/UL"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0869722, 0, 0.131868 )
shape = SubResource( 13 )

[node name="UR" type="Area" parent="Court/HitPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.919398, 0, 0.49957 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Court/HitPoints/UR"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0869722, 0, 0.131868 )
shape = SubResource( 13 )

[node name="UC" type="Area" parent="Court/HitPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.919398, 0, -0.12543 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Court/HitPoints/UC"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0869722, 0, 0.131868 )
shape = SubResource( 13 )

[node name="OutCourt" type="StaticBody" parent="."]
transform = Transform( -8.14603e-06, 0, 50, 0, 0.99, 0, -50, 0, -8.14603e-06, 0, 0, 0 )
physics_material_override = SubResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="OutCourt"]
shape = SubResource( 9 )

[node name="CSGMesh" type="CSGMesh" parent="OutCourt"]
mesh = SubResource( 10 )
material = SubResource( 14 )

[node name="Out" type="Area" parent="OutCourt"]

[node name="CollisionShape" type="CollisionShape" parent="OutCourt/Out"]
shape = SubResource( 15 )

[node name="OutCourt2" type="StaticBody" parent="."]
transform = Transform( 1.32716e-12, 1.61291e-07, 50, 50, -1.61291e-07, 0, 8.14603e-06, 0.99, -8.14603e-06, 0, 0, -49.9 )
physics_material_override = SubResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="OutCourt2"]
shape = SubResource( 9 )

[node name="CSGMesh" type="CSGMesh" parent="OutCourt2"]
mesh = SubResource( 10 )
material = SubResource( 14 )

[node name="Out" type="Area" parent="OutCourt2"]

[node name="CollisionShape" type="CollisionShape" parent="OutCourt2/Out"]
shape = SubResource( 15 )

[node name="OutCourt3" type="StaticBody" parent="."]
transform = Transform( 1.32716e-12, 1.61291e-07, 50, 50, -1.61291e-07, 0, 8.14603e-06, 0.99, -8.14603e-06, 0, 0, 51.588 )
physics_material_override = SubResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="OutCourt3"]
shape = SubResource( 9 )

[node name="CSGMesh" type="CSGMesh" parent="OutCourt3"]
mesh = SubResource( 10 )
material = SubResource( 14 )

[node name="Out" type="Area" parent="OutCourt3"]

[node name="CollisionShape" type="CollisionShape" parent="OutCourt3/Out"]
shape = SubResource( 15 )

[node name="BallK" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 3.81, 35 )
script = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="BallK"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 16 )

[node name="CSGMesh" type="CSGMesh" parent="BallK"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = SubResource( 17 )
material = SubResource( 18 )

[node name="Particles" type="Particles" parent="BallK"]
transform = Transform( 3, 0, 0, 0, -4.88762e-07, 3, 0, -3, -4.88762e-07, 0, 0, 0 )
emitting = false
amount = 1
lifetime = 1.5
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
local_coords = false
process_material = SubResource( 21 )
draw_pass_1 = SubResource( 23 )

[node name="Net" type="StaticBody" parent="."]
transform = Transform( 20, 0, 0, 0, 2, 0, 0, 0, 1, 0, 1, 0 )
physics_material_override = SubResource( 24 )
__meta__ = {
"_edit_group_": true
}

[node name="CSGMesh" type="CSGMesh" parent="Net"]
mesh = SubResource( 25 )

[node name="CollisionShape" type="CollisionShape" parent="Net"]
shape = SubResource( 26 )

[node name="Net" type="Area" parent="Net"]

[node name="CollisionShape" type="CollisionShape" parent="Net/Net"]
shape = SubResource( 27 )

[node name="Cameras" type="Spatial" parent="."]

[node name="TVCamera" type="Camera" parent="Cameras"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -0.523, 30.594, 48 )
far = 150.0

[node name="CourtLevelCamera" type="Camera" parent="Cameras"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.523, 10, 50 )
current = true
far = 150.0

[node name="SideCamera" type="Camera" parent="Cameras"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 50, 15, 0 )
far = 150.0

[node name="TopDownCamera" type="Camera" parent="Cameras"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -0.280792, 76.8989, 0.480886 )
far = 150.0

[node name="PowerBar" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="Bar" type="Control" parent="PowerBar"]
visible = false
anchor_right = 0.055
anchor_bottom = 0.233
margin_right = -26.32
margin_bottom = -19.8
grow_vertical = 0
rect_scale = Vector2( 0.9, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Green" type="TextureRect" parent="PowerBar/Bar"]
anchor_right = 0.02
anchor_bottom = 0.033
margin_top = 30.0
margin_right = 9.4
margin_bottom = 36.04
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yellow" type="TextureRect" parent="PowerBar/Bar"]
anchor_right = 0.02
anchor_bottom = 0.033
margin_top = 60.0
margin_right = 9.4
margin_bottom = 66.04
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red" type="TextureRect" parent="PowerBar/Bar"]
anchor_right = 0.02
anchor_bottom = 0.033
margin_top = 90.0
margin_right = 9.4
margin_bottom = 96.04
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red2" type="TextureRect" parent="PowerBar/Bar"]
anchor_right = 0.02
anchor_bottom = 0.033
margin_right = 9.4
margin_bottom = 6.04
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Indicator" type="TextureRect" parent="PowerBar/Bar"]
anchor_left = 0.026
anchor_top = 0.033
anchor_right = 0.055
anchor_bottom = 0.233
margin_left = -0.78
margin_top = 115.04
margin_right = 8.35
margin_bottom = 92.04
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 3, 1 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarTimer" type="Timer" parent="PowerBar/Bar"]
wait_time = 0.15
one_shot = true

[node name="Score" type="CanvasLayer" parent="."]
follow_viewport_enable = true
script = ExtResource( 3 )

[node name="EndPoint" type="Timer" parent="Score"]
wait_time = 0.3
one_shot = true

[node name="Control" type="Control" parent="Score"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 36.9684
margin_top = -157.132
margin_right = 76.9684
margin_bottom = -117.132
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="Score/Control"]
margin_left = -14.0
margin_top = 5.0
margin_right = 26.0
margin_bottom = 15.0
rect_scale = Vector2( 3, 4 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Label" parent="Score/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -9.9684
margin_top = -25.1268
margin_right = 241.032
margin_bottom = 17.8732
text = "Player   0  0   0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AI" type="Label" parent="Score/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -9.0
margin_top = -42.9405
margin_right = 241.0
margin_bottom = 0.0594902
text = "AI         0  0   0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Score/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -14.0
margin_top = 5.0
margin_right = -4.0
margin_bottom = 6.0
rect_scale = Vector2( 12, 1 )
texture = ExtResource( 6 )

[node name="TextureRect5" type="TextureRect" parent="Score/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -15.0
margin_right = -4.0
margin_bottom = -14.0
rect_scale = Vector2( 12, 1 )
texture = ExtResource( 6 )

[node name="TextureRect6" type="TextureRect" parent="Score/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -14.0
margin_top = 25.0
margin_right = -4.0
margin_bottom = 26.0
rect_scale = Vector2( 12, 1 )
texture = ExtResource( 6 )

[node name="TextureRect2" type="TextureRect" parent="Score/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 37.3418
margin_top = -15.1487
margin_right = 47.3418
margin_bottom = -14.1487
rect_rotation = 90.0
rect_scale = Vector2( 4, 1 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect7" type="TextureRect" parent="Score/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -15.0
margin_right = -4.0
margin_bottom = -14.0
rect_rotation = 90.0
rect_scale = Vector2( 4, 1 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect8" type="TextureRect" parent="Score/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 106.0
margin_top = -15.0
margin_right = 116.0
margin_bottom = -14.0
rect_rotation = 90.0
rect_scale = Vector2( 4, 1 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Score/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 52.7758
margin_top = -15.0
margin_right = 62.7758
margin_bottom = -14.0
rect_rotation = 90.0
rect_scale = Vector2( 4, 1 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Score/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 69.7847
margin_top = -15.0
margin_right = 79.7847
margin_bottom = -14.0
rect_rotation = 90.0
rect_scale = Vector2( 4, 1 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 17 )

[node name="Restart" type="TextureButton" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -129.852
margin_top = 7.49154
margin_right = 382.148
margin_bottom = 519.492
rect_scale = Vector2( 0.1, 0.1 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureButton" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -195.778
margin_top = 7.49154
margin_right = 316.222
margin_bottom = 519.492
rect_scale = Vector2( 0.1, 0.1 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 14 )

[node name="Settings" type="TextureButton" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -261.703
margin_top = 7.49154
margin_right = 250.297
margin_bottom = 519.492
rect_scale = Vector2( 0.1, 0.1 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="TextureButton" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -320.137
margin_top = 7.49154
margin_right = 191.863
margin_bottom = 519.492
rect_scale = Vector2( 0.1, 0.1 )
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI"]
pause_mode = 2
visible = false
show_behind_parent = true
anchor_left = -3.832
anchor_bottom = 3.368
margin_left = 3912.89
margin_top = -30.5085
margin_right = 12429.9
margin_bottom = 4740.08
color = Color( 0, 0, 0, 0.662745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="TextureButton" parent="UI"]
pause_mode = 2
anchor_left = 1.0
anchor_right = 1.0
margin_left = -63.1776
margin_top = 7.49154
margin_right = 448.822
margin_bottom = 519.492
rect_scale = Vector2( 0.1, 0.1 )
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Player/HitZone" to="BallK" method="_on_HitZone_body_entered"]
[connection signal="body_exited" from="Player/HitZone" to="BallK" method="_on_HitZone_body_exited"]
[connection signal="body_entered" from="AI/HitZone" to="BallK" method="_on_HitZone_body_entered"]
[connection signal="body_exited" from="AI/HitZone" to="BallK" method="_on_HitZone_body_exited"]
[connection signal="body_entered" from="Court/Court" to="BallK" method="_on_Court_body_entered"]
[connection signal="body_entered" from="OutCourt/Out" to="BallK" method="_on_Out_body_entered"]
[connection signal="body_entered" from="OutCourt2/Out" to="BallK" method="_on_Out_body_entered"]
[connection signal="body_entered" from="OutCourt3/Out" to="BallK" method="_on_Out_body_entered"]
[connection signal="body_entered" from="Net/Net" to="BallK" method="_on_Net_body_entered"]
[connection signal="timeout" from="PowerBar/Bar/BarTimer" to="PowerBar/Bar" method="_on_BarTimer_timeout"]
[connection signal="timeout" from="Score/EndPoint" to="Score" method="_on_EndPoint_timeout"]
[connection signal="pressed" from="UI/Restart" to="UI" method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/Menu" to="UI" method="_on_Menu_pressed"]
[connection signal="pressed" from="UI/Settings" to="UI" method="_on_Settings_pressed"]
[connection signal="pressed" from="UI/Sound" to="UI" method="_on_Sound_pressed"]
[connection signal="pressed" from="UI/Pause" to="UI" method="_on_Pause_pressed"]
